rbd-mirror: wait for events to replay before shut down journal replay

Fixes: https://tracker.ceph.com/issues/45409
Signed-off-by: Mykola Golub <mgolub@suse.com>